# via54Larkgroups

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  REFERENCES.md  SECURITY.md  index.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request.md  security_advisory.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  setup_zh.md
examples/: config.example.json  token.example.json
integrations/: README.md
scripts/: feishu-vault.bat  feishu-vault.sh
src/via54_larkgroups/: __init__.py  __main__.py  api_client.py  archive.py  config.py  oauth.py  sync.py
tests/: test_api_client.py  test_archive.py  test_cli.py  test_config.py  test_oauth.py  test_sync.py
